--- a/src/components/Research/research.css
+++ b/src/components/Research/research.css
@@ -1,10 +1,12 @@
-/* .research-main{
+.research-main{
     background-color: white;
-    /* display: flex;
+    display: flex;
     width: 100%;
     justify-content: flex-start;
     flex-direction: row; 
-} */
+    padding-bottom: 5%;
+    padding-left: 0.5%;
+}
 
  table{
      font-family: "Times New Roman";
