--- a/src/components/Sidebar.js/sidebar.css
+++ b/src/components/Sidebar.js/sidebar.css
@@ -47,7 +47,7 @@
 .animation-limit {
   overflow: hidden;
   width: 100%;
-  height: 80%;
+  height: fit-content;
 }
 .notice-section {
   height: 90%;
@@ -125,7 +125,7 @@
   margin-top: 4rem;
   margin-right: 0.5rem;
   width: 90%;
-  height: 320px;
+  height: auto;
   border: 1px solid grey;
 }
 
