--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -4,12 +4,6 @@
   box-sizing: border-box;
 }
 
-/* body{
-    margin: 10px 10%;
-    background-color: lightgrey;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-} */
-
 /* ---------left side---------- */
 .home-blog {  
   display: flex;
@@ -49,7 +43,7 @@
 
 .slidebar {
   margin: 1rem 0rem;
-  background-image: url("./img1.jpg");
+  background-image: url("./1.jpg");
   width: 94%;
   height: 310px;
   background-position: center;
@@ -60,16 +54,16 @@
 
 @keyframes slider {
   0% {
-    background-image: url("./img\ \(1\).jpg");
+    background-image: url("./2.jpg");
   }
   25% {
-    background-image: url("./img\ \(2\).jpg");
+    background-image: url("./3.jpg");
   }
   50% {
-    background-image: url("./img\ \(3\).jpg");
+    background-image: url("./4.jpg");
   }
   75% {
-    background-image: url("./img\ \(4\).jpg");
+    background-image: url("./5.jpg");
   }
 }
 
@@ -82,7 +76,7 @@
 
 .slides button {
   font-size: 40px;
-  color: white;
+  color: black;
   cursor: pointer;
   background-color: unset;
   border-style: none;
