--- a/src/components/submissions/guidesub.css
+++ b/src/components/submissions/guidesub.css
@@ -1,3 +1,11 @@
+.sub-main{
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    flex-direction: column;
+    background-color: white;
+    padding: 2% 0.5%;
+}
 
 .set
 {
