--- a/src/components/Research/research.css
+++ b/src/components/Research/research.css
@@ -3,7 +3,8 @@
     display: flex;
     width: 100%;
     justify-content: flex-start;
-    flex-direction: row; 
+    flex-direction: row;
+    padding-top: 3.5%; 
     padding-bottom: 5%;
     padding-left: 0.5%;
 }
