--- a/src/components/header/componant/header.css
+++ b/src/components/header/componant/header.css
@@ -12,10 +12,40 @@
   align-items: center;
   justify-items: center;
 }
-@media screen and (max-width: 951px) {
+
+
+@media screen and (max-width: 999px) {
   .header-img {
     margin-left: 0;
-    width: 100%;
-   
+    height: 360px;
+  }
+}
+
+
+@media screen and (max-width: 800px) {
+  .header-img {
+    margin-left: 0;
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .header-img {
+    margin-left: 0;
+    height: 250px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .header-img {
+    margin-left: 0;
+    height: 200px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .header-img {
+    margin-left: 0;
+    height: 150px;
   }
 }
