--- a/src/components/submissions/guidesub.css
+++ b/src/components/submissions/guidesub.css
@@ -34,6 +34,17 @@
     padding: 5px;
     
 }
+
+h3{
+    padding: 5px;
+    padding-left: 25px;    
+}
+
+a{
+    padding-left: 40px;
+    color: #ff4200;
+    font-weight: bolder;
+}
    
 
 @media only screen and (max-width: 750px){
