--- a/src/components/header/componant/navbar.css
+++ b/src/components/header/componant/navbar.css
@@ -152,3 +152,31 @@
     width: 50%;
   }
 }
+
+
+@media screen and (min-width: 1350px) and (max-width: 1450px)
+{
+  .nav-items {
+    display: flex;
+    list-style: none;
+    text-align: center;
+    font-size: 15px;
+    flex-wrap: wrap;
+   padding: 0px 0px;
+
+     
+     
+  }
+  .icon {
+    margin-left: 5px;
+    /* position: absolute;
+    top: 16px; */
+  }
+  .navbar {
+    height: 100px !important;
+    background: #1b1919;
+    display: grid;
+    border-top: 3px solid #f27300;
+    width: 100%; 
+}
+}
