--- a/src/components/Aim/Aim.css
+++ b/src/components/Aim/Aim.css
@@ -7,12 +7,12 @@
 }
 
 .aim h1{
-        margin-left: 1rem;
-        padding: 0.5rem 0.5rem;
+        padding: 2rem 1rem 1rem 2rem;
 }
 
 .aim p {
-        margin-left: 1.5rem;
-        word-wrap: break-word;
-        line-height: 1.8;
+    font-size: 17px;
+    padding: 0.2rem 1rem 0.2rem 3rem;
+    line-height: 1.8;
+    word-wrap: break-word;
 }
