--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  padding: 0.8rem;
+  padding: 0.5rem;
   flex-shrink: 0;
   background-color: white;
 }
@@ -53,7 +53,7 @@
 .notice-section {
   height: 90%;
 
-  animation: upward linear 30s infinite;
+  animation: upward linear 15s infinite;
   overflow: hidden;
 }
 .notice-section:hover {
@@ -127,7 +127,10 @@
   margin-right: 0.5rem;
   width: 90%;
   height: auto;
+  max-height: 420px;
+  min-height: 220px;
   border: 1px solid grey;
+  overflow: hidden;
 }
 
 #news h3 {
@@ -158,7 +161,7 @@
   .rightside {
     align-items: center;
     justify-content: center;
-    padding: 1rem 2rem;
+    padding: 1rem 2rem; 
   }
 
   .searchdiv {
@@ -242,6 +245,7 @@
     justify-content: center;
     align-items: center;
     padding: 0.1rem;
+    padding-bottom: 1rem;
   }
 
   .searchdiv {
