--- a/src/components/admin/AddNews.css
+++ b/src/components/admin/AddNews.css
@@ -5,20 +5,20 @@
 
 .AddNews-main{
     width: 100%;
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     background-color:white;
+    padding: 2rem 1rem 1rem 2rem;
 }
 
 .AddNews-main input{
     margin-left: 1rem;
     padding: 1rem;
-    margin: 10px;
+    margin: 1rem;
     font-size: 15px;
-    width: 60%;
+    width: 70%;
     border-radius: 5px;
     border-style: outset;
     box-shadow: 0 10px 20px rgba(0, 0, 0, .1),0 3px 6px rgba(0, 0, 0, .05);
@@ -73,15 +73,23 @@
 
 .AddNews-main textarea{
     padding: 2rem;
-    margin: 5px;
+    margin: 1rem;
     font-size: 15px;
-    width: 60%;
+    width: 70%;
     border-radius: 5px;
     border-style: outset;
     box-shadow: 0 10px 20px rgba(0, 0, 0, .1),0 3px 6px rgba(0, 0, 0, .05);
 }
 
-@media (max-width: 420px) {
+@media (max-width: 450px) {
+  .AddNews-main input{
+    width: 90%;
+  }
+
+  .AddNews-main textarea{
+    width: 90%;
+  }
+
     .AddNews-main button {
     height: 30px;
   }
