--- a/src/components/admin/uploadvolume.css
+++ b/src/components/admin/uploadvolume.css
@@ -5,12 +5,11 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    padding: 2rem 1rem 1rem 1rem;
 }
 
 .inp {
-    margin-top: 0.5rem;
-    margin-left: 0.8rem;
-    padding: 0.4rem;
+    padding: 0.5rem;
     font-size: 16px;
     border-radius: 0.25rem;
     border-style: solid;
@@ -18,14 +17,13 @@
 }
 
 .volume-btn{
-    position: relative;
+  position: relative;
   border-radius: 0.25rem;
-  font-size: 16px;
-  padding: 0.5rem;
+  font-size: 16.5px;
+  font-weight: bold;
+  padding: 0.6rem;
   cursor: pointer;
-  margin-top: 0.5rem;
-  margin-bottom: 0.1rem;
-  margin-left: -0.5rem;
+  margin-top: 1rem;
   background-color: #ff6900;
   color: white;
   border-style: none;
@@ -33,7 +31,7 @@
 }
 
 .volume-btn:hover{
-    border-radius: 0.28rem;
+  border-radius: 0.28rem;
   font-size: 16.5px;
   padding: 0.5rem;
   cursor: pointer;
@@ -41,4 +39,15 @@
   margin-bottom: 0.1rem;
   background-color: #ff6400;
   box-shadow: 0.5px 1px 1px 2px lightgray;
+}
+
+
+@media only screen and (max-width: 350px) {
+  .inp{
+    width: 96%;
+  }
+
+  .volume-btn{
+    width: 30%;
+  }
 }
