--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -14,94 +14,57 @@
 }
 
 .leftside {
-  padding: 0.5rem 0.5rem;
-  margin-left: 1rem;
+  margin: 0.5rem 0.5rem;
+  padding: 0rem 2rem;
 }
 
 .leftside h1 {
+  padding-bottom: 0.2rem;
+  margin-top: 2.5rem;
   font-size: 36px;
   font-family: Calibri Light;
 }
 
 .leftside p {
+  padding: 0.2rem 0rem;
   font-size: 16px;
   text-align: center;
-  margin: 0;
-  padding: 0;
   font-weight: bold;
   word-wrap: break-word;
   color: #ff6900;
 }
 
-
-.middle-div {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
 .middle-div p {
-  font-size: 17.5px;
+  font-size: 18px;
   text-align: justify;
   color: #202020;
-  margin: 0.2rem;
-  margin-left: 1rem;
+  margin: 0.5rem;
 }
 
 .middle-div a {
-  margin-left: 2rem;
+  margin-left: 1rem;
   color: #ff6900;
   font-size: 18px;
 }
 
 .middle-div hr {
-  margin: 0.8rem;
-  background-color: #ff6900;
+  margin: 0.5rem;
 }
 
 .middle-div img {
-  max-width: 98%;
+  width: 98%;
   height: auto;
-}
-
-.mainbtn a {
-  display: flex;
-  justify-content: center;
-}
-
-.middle-div button {
-  overflow: auto;
-  margin: 1rem 2rem;
-  padding: 1rem 2rem;
-  background-color: #ff6900;
-  color: white;
-  width: 96%;
-  border-radius: 25px;
-  font-size: 16px;
-  text-transform: uppercase;
-  cursor: pointer;
-  border-style: none;
-}
-
-.middle-div button:hover{
-  background-color: #ff4200;
-  color: antiquewhite;
-}
-
-.middle-div img {
   overflow: hidden;
-  margin-left: 3rem;
-  margin-right: 1rem;
 }
 
 .img2 {
   border: 1px solid black;
-  width: 90%;
+  width: 98%;
 }
 
 .bot {
   margin: 0.5rem 0.1rem;
-  padding-left: 4rem;
+  padding-left: 2rem;
 }
 
 /* ============================================================================== */
@@ -109,12 +72,12 @@
 
 @media only screen and (max-width: 900px) and (min-width: 500px) {
   .leftside {
-    padding: 0.5rem 0.5rem;
-    margin-left: 1rem;
+    margin: 0.2rem 0.2rem;
+    padding: 0rem 1rem;
   }
 
   .leftside h1 {
-    font-size: 30px;
+    font-size: 28px;
   }
 
   .leftside p {
@@ -126,39 +89,14 @@
   }
 
   .middle-div a {
-    margin-left: 1rem;
     font-size: 17px;
-  }
-
-  .middle-div hr {
-    margin: 0.4rem;
-  }
-
-  .middle-div img {
-    max-width: 98%;
-    height: auto;
-  }
-
-  .middle-div button {
-    margin: 0.5rem 1rem;
-    padding: 0.5rem 1rem;
-    font-size: 14px;
-  }
-
-  .img2 {
-    padding-left: 2rem;
-  }
-
-  .bot {
-    margin: 0.5rem 0.1rem;
-    padding-left: 1.5rem;
   }
 }
 
 @media only screen and (max-width: 500px) {
   .leftside {
-    padding: 0.4rem 0.2rem;
-    margin-left: 0.5rem;
+    margin: 0.1rem 0.1rem;
+    padding: 0rem 0.8rem;
   }
 
   .leftside h1 {
@@ -168,32 +106,8 @@
   .leftside p {
     font-size: 13px;
   }
-  
+
   .middle-div a {
     font-size: 15px;
-  }
-
-  .middle-div hr {
-    margin: 0.2rem;
-  }
-
-  .middle-div img {
-    max-width: 98%;
-    height: auto;
-  }
-
-  .middle-div button {
-    margin: 0.5rem 1rem;
-    padding: 0.5rem 1rem;
-    font-size: 10px;
-  }
-
-  .img2 {
-    padding-left: 1rem;
-  }
-
-  .bot {
-    margin: 0.10rem 0.1rem;
-    padding-left: 0.50rem;
   }
 }
