--- a/src/components/Copyright/Copyright.css
+++ b/src/components/Copyright/Copyright.css
@@ -5,3 +5,25 @@
   flex-direction: column;
   background-color: white;
 }
+
+
+.copyright h3{
+    padding: 2.5rem 2rem 1rem 2.5rem;
+    color: #ff6900;
+    line-height: 1.6;
+}
+
+
+.copyright p{
+    font-size: 17px;
+    padding: 0.2rem 2rem 0.2rem 3rem;
+    line-height: 1.3;
+    word-wrap: break-word;
+}
+
+.copyright a{
+    padding-left: 3.5rem;
+    padding-top: 0.5rem;
+    color: #ff4200;
+    font-weight: bolder;
+}
